<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::create('kos_rule', function (Blueprint $table) {
            $table->id();
            $table->foreignId('kos_id')->constrained('koses')->cascadeOnDelete();
            $table->foreignId('rule_id')->constrained('rules')->cascadeOnDelete();
            $table->timestamps();
        });
    }

    public function down(): void
    {
        Schema::dropIfExists('kos_rule');
    }
};
